--- a/templates/React.xml
+++ b/templates/React.xml
@@ -5,7 +5,7 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="emotion" value="/** @jsx jsx */&#10;import { jsx, css } from '@emotion/styled';&#10;import styled from '@emotion/styled';" toReformat="false" toShortenFQNames="true">
+  <template name="emotion" value="/** @jsx jsx */&#10;import { jsx, css } from '@emotion/core';&#10;import styled from '@emotion/styled';" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="ECMAScript6" value="true" />
       <option name="JAVA_SCRIPT" value="true" />
