--- a/templates/React.xml
+++ b/templates/React.xml
@@ -1,5 +1,5 @@
 <templateSet group="React">
-  <template name="rfc" value="import * as React from 'react';&#10;&#10;// ===&#10;// @interface&#10;&#10;interface Props {&#10;}&#10;&#10;// ===&#10;// @view&#10;const $TM_FILENAME_BASE$: React.FC&lt;Props&gt; = props =&gt; {&#10;  return (&#10;  )&#10;};&#10;&#10;// ===&#10;// @styled&#10;&#10;// ===&#10;// @container&#10;&#10;// ===&#10;// @export&#10;export default $TM_FILENAME_BASE$;" description="Typescript React Function Component boilerplate" toReformat="false" toShortenFQNames="true">
+  <template name="rfc" value="// ===&#10;// @modules&#10;&#10;// ===&#10;// @interface&#10;&#10;interface Props {&#10;}&#10;&#10;// ===&#10;// @view&#10;export const $TM_FILENAME_BASE$: React.FC&lt;Props&gt; = props =&gt; {&#10;  return (&#10;  )&#10;};&#10;&#10;// ===&#10;// @styled" description="Typescript React Function Component boilerplate" toReformat="false" toShortenFQNames="true">
     <variable name="TM_FILENAME_BASE" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
@@ -9,6 +9,13 @@
     <context>
       <option name="ECMAScript6" value="true" />
       <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
+  <template name="npage" value="// ===&#10;// @modules&#10;// ===&#10;import { GetStaticProps, GetStaticPaths, GetServerSideProps } from 'next';&#10;&#10;// ===&#10;// @Types&#10;// ===&#10;interface Props {&#10;}&#10;&#10;// ===&#10;// @Component&#10;// ===&#10;&#10;const $TM_FILENAME_BASE$: React.FC&lt;Props&gt; = () =&gt; {&#10;  return (&#10;    &lt;div&gt;&lt;/div&gt;&#10;  )&#10;}&#10;&#10;// ===&#10;// @Styles&#10;// ===&#10;&#10;// ===&#10;// @export&#10;// ===&#10;&#10;export const getStaticProps: GetStaticProps = async (context) =&gt; {&#10;}&#10;&#10;export const getStaticPaths: GetStaticPaths = async () =&gt; {&#10;}&#10;&#10;export const getServerSideProps: GetServerSideProps = async (context) =&gt; {&#10;}&#10;&#10;export default $TM_FILENAME_BASE$" toReformat="false" toShortenFQNames="true">
+    <variable name="TM_FILENAME_BASE" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="TypeScript" value="true" />
     </context>
   </template>
 </templateSet>
