--- a/templates/React.xml
+++ b/templates/React.xml
@@ -18,4 +18,10 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
+  <template name="napi" value="import { NextApiRequest, NextApiResponse } from 'next'&#10;&#10;export default async function handle(req: NextApiRequest, res: NextApiResponse) {&#10;  res.status(404).end()&#10;}" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="TypeScript" value="true" />
+    </context>
+  </template>
 </templateSet>
