--- a/templates/React.xml
+++ b/templates/React.xml
@@ -11,14 +11,14 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="npage" value="// ===&#10;// @modules&#10;// ===&#10;import { GetStaticProps, GetStaticPaths, GetServerSideProps, NextPage } from 'next';&#10;&#10;// ===&#10;// @Types&#10;// ===&#10;&#10;&#10;// ===&#10;// @Component&#10;// ===&#10;&#10;const $TM_FILENAME_BASE$: NextPage = () =&gt; {&#10;  return (&#10;    &lt;div&gt;&lt;/div&gt;&#10;  )&#10;}&#10;&#10;// ===&#10;// @export&#10;// ===&#10;&#10;export const getStaticProps: GetStaticProps = async (context) =&gt; {&#10;}&#10;&#10;export const getStaticPaths: GetStaticPaths = async () =&gt; {&#10;}&#10;&#10;export const getServerSideProps: GetServerSideProps = async (context) =&gt; {&#10;}&#10;&#10;export default $TM_FILENAME_BASE$" toReformat="false" toShortenFQNames="true">
+  <template name="npage" value="// ===&#10;// @modules&#10;// ===&#10;import { GetStaticProps, GetStaticPaths, GetServerSideProps, NextPage } from 'next';&#10;&#10;// ===&#10;// @Types&#10;// ===&#10;&#10;&#10;// ===&#10;// @Component&#10;// ===&#10;&#10;const $TM_FILENAME_BASE$: NextPage = () =&gt; {&#10;  return (&#10;    &lt;div&gt;&lt;/div&gt;&#10;  )&#10;}&#10;&#10;// ===&#10;// @export&#10;// ===&#10;&#10;export const getStaticProps: GetStaticProps = async (context) =&gt; {&#10;}&#10;&#10;export const getStaticPaths: GetStaticPaths = async () =&gt; {&#10;}&#10;&#10;export const getServerSideProps: GetServerSideProps = async (context) =&gt; {&#10;}&#10;&#10;export default $TM_FILENAME_BASE$" description="" toReformat="false" toShortenFQNames="true">
     <variable name="TM_FILENAME_BASE" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="TypeScript" value="true" />
     </context>
   </template>
-  <template name="napi" value="import { NextApiRequest, NextApiResponse } from 'next'&#10;&#10;export default async function handle(req: NextApiRequest, res: NextApiResponse) {&#10;  res.status(404).end()&#10;}" toReformat="true" toShortenFQNames="true">
+  <template name="napi" value="import { NextApiRequest, NextApiResponse } from 'next'&#10;&#10;export default async function handle(req: NextApiRequest, res: NextApiResponse) {&#10;  res.status(404).end()&#10;}" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="TypeScript" value="true" />
@@ -31,7 +31,7 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
-  <template name="story" value="import { $TM_FILENAME_BASE$, Props } from './$TM_FILENAME_BASE$'&#10;&#10;export default {&#10;  title: 'path',&#10;  component: $TM_FILENAME_BASE$&#10;}&#10;&#10;const Template = (args: Props): React.ReactElement =&gt; &lt;$TM_FILENAME_BASE$ {...args} /&gt;&#10;&#10;export const Base = Template.bind({})" toReformat="false" toShortenFQNames="true">
+  <template name="story" value="import { $TM_FILENAME_BASE$, Props } from './$TM_FILENAME_BASE$'&#10;&#10;export default {&#10;  title: 'path',&#10;  component: $TM_FILENAME_BASE$&#10;}&#10;&#10;const Template = (args: Props): React.ReactElement =&gt; &lt;$TM_FILENAME_BASE$ {...args} /&gt;&#10;&#10;export const Base = Template.bind({})" description="" toReformat="false" toShortenFQNames="true">
     <variable name="TM_FILENAME_BASE" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
