--- a/templates/Ruby.xml
+++ b/templates/Ruby.xml
@@ -3,4 +3,8 @@
     <variable name="PROGRAM_NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <context />
   </template>
+  <template name="doo" value="do |$OBJ$|&#10;  $END$&#10;end" description="do end block with object" toReformat="true" toShortenFQNames="true">
+    <variable name="OBJ" expression="" defaultValue="" alwaysStopAt="true" />
+    <context />
+  </template>
 </templateSet>
